add more fields to workout api schema
