# src/main/java/com/kfs/health_app/dto/SetExerciseGroupDto.java
@@ -4,12 +4,16 @@ import java.util.List;
 
 public record SetExerciseGroupDto(
     int workoutId,
+    String name,
+    String completionDate,
+    String userId,
     int setGroupId,
-    int exerciseId,
     String exercise,
     int setCount,
     List<Short> repetitions,
     List<Float> weights,
     List<Short> intensities,
-    List<Short> restPeriods
+    List<Short> restPeriods,
+    String unit,
+    String unitAbbreviation
 ) { }
